--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Outfit:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -13,35 +13,37 @@ body {
 #container {
   display: grid;
   grid-template-columns: 1fr;
-  height: auto;
-  margin-top: 20px;
+  margin: 15px;
 }
 
-.card {
+#card {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   gap: 20px;
   flex-wrap: wrap;
   justify-self: center;
 }
 
 #image__card {
-  max-width: 700px;
+  max-width: 52rem;
+  max-height: 22rem;
 }
 
 #image__card--container {
   position: relative;
   justify-self: center;
+  margin-bottom: 1rem;
+  overflow: hidden;
+  border-radius: 1rem;
 }
 
 .card__details--image {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
   position: absolute;
-  bottom: 3rem;
+  bottom: 1.5rem;
   color: white;
   left: 2rem;
   padding-right: 2rem;
@@ -50,30 +52,36 @@ body {
 .label {
   background-color: grey;
   color: white;
-  font-size: 0.8rem;
+  font-size: 0.65rem;
   height: 1.3rem;
-  width: 4rem;
+  width: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
 }
 
+#image__card > div > p {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
 .image {
   width: 100%;
+  border-radius: 1rem;
 }
 
 .author {
-  font-size: 0.8rem;
+  font-size: 0.65rem;
   color: gray;
 }
 
 .card__item {
-  width: 20.625rem;
-  height: 13.4375rem;
+  width: 100%;
+  height: 25%;
   padding: 1rem;
   border: 1px solid gray;
-  border-radius: 5px;
+  border-radius: 1rem;
   overflow: hidden;
   position: relative;
 }
@@ -99,10 +107,12 @@ body {
 .card__details p {
   margin-bottom: 1rem;
   font-size: 0.8rem;
+  font-weight: bold;
 }
 
 .card__details span {
   font-size: 0.8rem;
+  font-weight: bold;
 }
 
 #label__decode {
@@ -131,6 +141,15 @@ body {
   transition: box-shadow 0.3s ease;
 }
 
+@media (min-width: 37rem) {
+  #image__card > div > p {
+    font-size: 1rem;
+  }
+  .author {
+    font-size: 0.8rem;
+  }
+}
+
 @media (min-width: 57rem) {
   #container {
     grid-template-columns: repeat(2, 1fr);
@@ -141,6 +160,11 @@ body {
   }
   #image__card--container {
     background: linear-gradient(to bottom, transparent 0, #000 100%);
+  }
+
+  #image__card {
+    max-width: none;
+    max-height: none;
   }
 }
 
